--- a/package.json
+++ b/package.json
@@ -2,19 +2,24 @@
   "name": "form-registration",
   "version": "1.0.0",
   "description": "",
-  "main": "app-2.js",
+  "main": "app.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "watchify app.js -o src/js/bundle.js -v --delay 300"
   },
   "keywords": [],
   "author": "Thomas G. aka Drozerah <drozerah@gmail.com> (https://github.com/Drozerah)",
   "license": "ISC",
   "devDependencies": {
+    "browserify": "^16.5.0",
     "eslint": "^6.8.0",
     "eslint-config-standard": "^14.1.0",
     "eslint-plugin-import": "^2.20.1",
     "eslint-plugin-node": "^11.0.0",
     "eslint-plugin-promise": "^4.2.1",
-    "eslint-plugin-standard": "^4.0.1"
+    "eslint-plugin-standard": "^4.0.1",
+    "watchify": "^3.11.1"
+  },
+  "dependencies": {
+    "validator": "^12.2.0"
   }
 }
